# elevator_system

./: .gitignore  .gitmodules  CMakeLists.txt  Elevator System  README.md  main.cpp
include/ElevatorCabinCallPad/: elevator_cabin_call_pad.cpp  elevator_cabin_call_pad.hpp
include/ElevatorClass/: elevator.cpp  elevator.hpp  elevator_class.cpp  elevator_class.hpp
include/ElevatorClass/ElevatorComponents/ElevatorCabin/: elevator_cabin.cpp  elevator_cabin.hpp
include/ElevatorClass/ElevatorComponents/ElevatorShaft/: elevator_shaft.cpp  elevator_shaft.hpp
include/ElevatorsManager/: elevators_manager.cpp  elevators_manager.hpp  elevators_manager_class.cpp  elevators_manager_class.hpp
src/: main.cpp
system_design/: Advanced Elevator System  Elevator System
